<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fedart_logo"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:fontFamily="@font/audiowide"
        android:scaleY="0.9"
        android:text="@string/fed_art"
        android:textColor="#0D47A1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:layout_editor_absoluteX="214dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="193dp"
        android:layout_height="66dp"
        android:layout_marginTop="104dp"
        android:text="Fedcoin"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="Coin Balance"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="number"
        android:text="3.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:text="@string/these_fedcoins_can_be_exchanged_for_federation_university_merchandise"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="252dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="364dp"
        android:layout_height="77dp"
        android:text="@string/please_check_in_at_the_reception_at_uni_after_buying_it_from_here_or_the_marketplace_within_the_application"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="307dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="369dp"
        android:layout_height="81dp"
        android:text="@string/with_available_pobalance_you_are_able_to_buy_the_below_mentioned_merchandise_alternatively_click_the_button_below_to_go_the_website_to_buy_more_merchandise_online"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="391dp" />
    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#000000"
        android:text="@string/fed_store"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="146dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/caps"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="490dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="183dp"
        android:layout_height="154dp"
        app:srcCompat="@drawable/hoodies"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="490dp" />

</androidx.constraintlayout.widget.ConstraintLayout>